--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -23,6 +23,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
     text-decoration: none;
+	color: black;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -50,17 +51,14 @@ table {
 /*above are css reset */
 
 
-
-
-*{
-    background-color: #CFC1AE ;
-	color:black
-}
 .navbar-container{
     display: flex;
     justify-content: space-between;
-    margin: 1.5rem 2rem;
+    padding: 1rem 2rem;
 	align-items: center;
+	background-color: #BEA888 ;
+	color:black;
+	font-weight: 550;
 }
 .navbar-tabs{
     display:flex;
@@ -78,5 +76,6 @@ table {
 }
 
 hr{
-	border: 1px solid rgba(99, 99, 99,0.25);
+	margin: 0;
+	border: 1px solid var(--color-hr-seperator);
 }
