--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -51,12 +51,17 @@ table {
 
 
 .navbar-container{
+	position: fixed;
     display: flex;
     justify-content: space-between;
     padding: 1rem 2rem;
 	align-items: center;
 	background-color: var(--color-secondary);
 	font-weight: 550;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: calc(infinity);
 }
 .navbar-name-logo{
 	color:var(--color-text);
