--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -253,22 +253,29 @@ html, body{
 }
 .tsa-job-title-list{
   padding-left: 6vw;
-  line-height: 1.5rem;
+  line-height: 2rem;
+}
+.fa-icon{
+  width: 1rem;
+  height: 1rem;
 }
 .event-photo-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-row-gap: 20px;
+  grid-row-gap: 5rem;
   justify-content: space-evenly;
   justify-items: center;
   align-content: space-evenly;
   align-items: center;
-  padding-bottom: 1rem;
+  padding: 1rem 2rem 4rem 2rem;
 }
 .tsa-photo{
   width: 15rem;
   height: 10rem;
   object-fit: cover;
   border-radius: 1.5rem;
+}
+.tsa-photo:hover{
+  transform: scale(1.25);
 }
 /* Education page CSS ENDS here */
